# orchestrator-cpp

./: .gitignore  CMakeLists.txt  README.md  shell.nix
.github/workflows/: test.yml
cmake/: orchestratorConfig.cmake.in
include/orchestrator/: Job.h  JobDatabase.h  JobExecutor.h  JobQueue.h  Result.h
src/: JobQueue.cpp  main.cpp
tests/: JobQueueTest.cpp
